FIREFLY-1770: Move pct_complete to progress under uws:jobInfo